adding more boxes